--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
 				</div>
 			</section>
 		</article>
-		<footer></footer>
+		<footer>
+			<div class="footer_container">
+				<a href="https://github.com/khaledfathi/amr_spiky" target="_blank">
+					<div class="github">
+						<img src="images/github.png" width="70px" height:70px>
+						<p>Source Code @ GitHub</p>
+					</div>
+				</a>
+			</div>
+		</footer>
 		<!--Main JavaScript File-->
 		<script src="js/main.js"></script>
 	</body>
